--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,149 @@
-body {
+html,body {
+  margin: 0;
+  padding: 0;
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 14px;
-  line-height: 21px;
+  line-height: 24px;
+  font-weight: normal;
   color: #333;
   background: #f2f2f2;
+  text-transform: uppercase;
 }
 
-h1{
- font-family: "PT Sans", Arial, sans-serif;
- font-size: 21px; 
- font-weight:bold;
-
+a {
+  text-decoration: none;
 }
 
-.features-items h2 {
+.container {
+  max-width: 1200px;
+  min-width: 768px;
+  margin: 0 auto;
+  background: #fff;
+  box-shadow: 0 -5px 15px 0 rgba(0,0,0,.2);
+  }
 
+.main-header {
+  position: relative;
+  background: #fff;
 }
+
+.main-navigation .main-header-logo {
+  position: absolute;
+  z-index: 1;
+  left: 50%;
+  width: 138px;
+  height: 70px;
+  margin-left: -69px;
+  font-size: 0;
+  line-height: 0;
+  color: transparent;
+  background:transparent url("img/logo.svg") no-repeat 0 0;
+}
+
+.site-navigation {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  font-size: 0;
+}
+
+.site-navigation li {
+  display: inline-block;
+  vertical-align: top;
+  width: 20%;
+}
+
+.site-navigation a {
+  display: block;
+  padding: 15px 0;
+  font-size: 14px;
+  line-height: 26px;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  color: #000;
+}
+
+.site-navigation a:hover {
+  color: #81b3d2;
+}
+
+.site-navigation a:active {
+  color: #000;
+  opacity: .3;
+}
+
+.site-navigation .active {
+  color: #766357;
+}
+
+.site-navigation .active:hover {
+  color: #604e43;
+}
+
+.site-navigation .active:active {
+  color: #766357;
+  opacity: .3;
+}
+
+.site-navigation li:nth-child(2) {
+  margin-right: 20%;
+}
+
+
+.visually-hidden {
+  position: absolute;
+  visibility: hidden;
+  display: none;
+} 
+
+.poster {
+  position: relative;
+  height: 510px;
+  background: #3d4c57 url("../img/intro.jpg") no-repeat 50% 30%;
+  background-size: cover;
+}
+ 
+.poster::after {
+  content: "";
+  position: absolute;
+  z-index: 2;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 57px;
+  background: transparent url("../img/intro-shape.png") no-repeat 0 50%;
+  background-size: 100% 57px;
+  }
+
+
+.features {
+  padding: 31px 0;
+  line-height: 26px;
+  text-align: center;
+}
+
+.features-head h1 {
+  width: 450px;
+  margin: 28px auto;
+  font-size: 21px;
+  color: #000;
+}
+
+.features-head p {
+  margin: 20px 0;
+}
+
+
+h1 {
+  font-family: "PT Sans", Arial, sans-serif;
+  font-size: 21px; 
+  font-weight:bold;
+}
+
+h2 {
+  font-weight: bold;
+  font-size: 21px;
+}
+
+.features-items h2 
