--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ a {
 .visually-hidden {
   position: absolute;
   visibility: hidden;
-  display: none;
+  display: block;
 } 
 
 .poster {
@@ -116,34 +116,351 @@ a {
   background-size: 100% 57px;
   }
 
+------ Features ------
 
 .features {
-  padding: 31px 0;
-  line-height: 26px;
+  min-height: 256px;
+  background: #eee;
+}
+
+.features .features-head {
+  padding: 0 4%;
+  padding-top: 35px;
+}
+
+.features-head {
   text-align: center;
 }
 
-.features-head h1 {
-  width: 450px;
-  margin: 28px auto;
+---
+---
+
+.feature-title {
+  margin: 10px auto;
   font-size: 21px;
+  line-height: 26px;
+  font-weight: bold;
+}
+
+----
+----
+
+
+.features-items {
+  color: #fff;
+  background: #81b3d2;
+}
+
+.item-title .features-blue {
+  padding: 0 6%;
+  padding-top: 35px;   
+}
+
+.item-title p {
+  margin: 22px auto;
+}
+
+.right .features-items {
+  padding: 0 7%;
+  padding-top: 35px;
+}
+
+.features-items .item-title h2 {
+  margin-top: 17px;  
+}
+
+.features-items-img {
+  position: relative;
+  height: 256px;
+  overflow: hidden;
+  background: rgba(0,0,0,.1); 
+}
+
+.features-items-img img {
+  position: absolute;
+  top: 50%;
+  max-width: 100%;
+  height: auto;
+                    <-----
+}
+
+.advantages-items {
+  min-height: 330px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.advantage-title {
+  padding: 0 6%;
+  padding-top: 35px;
+  text-align: center;
+}
+
+.advantage-title .features-white {
+  position: relative;
+  margin: 20px auto;
+  padding-top: 103px;
+  font-size: 21px;
+  line-height: 26px;
+  font-weight: bold; 
+}
+
+-------Поиск гостиницы в Седоне-----------
+/*
+.choose-intro {
+  position: relative;
+  z-index: 1;
+  width: 568px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.choose-intro h2 {
+  margin-top: 53px;
+  margin-bottom: 29px;
+  font-size: 30px;
+  line-height: 30px;
+  font-weight: bold;
+}
+
+.choose-intro p {
+  margin: 24px 50px;
+  line-height: 24px;
+}
+
+.intro .btn-book {
+  position: relative;
+  z-index: 2;
+  display: block;
+  margin-top: 45px;
+  padding: 30px;
+  font-size: 21px;
+  line-height: 26px;
+}
+
+.choose-dates {
+  position: absolute;
+  z-index: 1;
+  left: 0;
+  right: 0;
+  background: #fff;
+  box-shadow: 0 7px 15px 0 rgba(0,0,0,.15);
+}
+
+.form {
+  margin: 55px;
+}
+
+.arrive-form {
+  position: relative;
+  margin: 0;
+  margin-bottom: 30px;
+  padding: 0;
+  border: none;
+  font-size: 0;
+  font-weight: bold;
+  text-align: left;
+}
+
+.form .form-label {
+  display: inline-block;
+  vertical-align: top;
+  width: 115px;
+  font-size: 14px;
+  line-height: 41px;
+}
+
+.form .form-input {
+  display: inline-block;
+  vertical-align: top;
+}
+
+.form-input-date {
+  width: 343px;
+  padding-right: 38px;
+}
+
+.calendar {
+  position: absolute;
+  right: 0;
+  top: 0;
+  color: #a9a9a9;
+}
+
+.calendar::before {
+  width: 38px;
+  margin: 0;
+  font-size: 21px;
+  line-height: 38px;
+  text-align: center;
+}
+
+.form-input-date:hover + .icon-calendar {
   color: #000;
 }
 
-.features-head p {
-  margin: 20px 0;
+.form-input-date:focus + .icon-calendar {
+  color: #81b3d2;
 }
 
-
-h1 {
-  font-family: "PT Sans", Arial, sans-serif;
-  font-size: 21px; 
-  font-weight:bold;
+.growns {
+  display: inline-block;
+  vertical-align: top;
+  margin: 0;
+  padding: 0;
+  border: none;
+  font-size: 0px;
 }
 
-h2 {
-  font-weight: bold;
+.form-input-tally {
+  width: 38px;
+  padding: 8px 0;
+  text-align: center;
+}
+
+.growns button {
+  display: inline-block;
+  vertical-align: top;
+  padding: 0;
+  border: none;
+  outline: none;
+  color: #a9a9a9;
+  background: #f2f2f2;
+}
+
+.growns button::before {
+  display: block;
+  width: 38px;
+  margin: 0;
+  font-size: 14px;
+  line-height: 38px;
+  text-align: center;
+}
+
+.growns .form-label[for='counter-children'] {
+  width: 65px;
+  margin-left: 50px;
+}
+
+.form .btn {
+  width: 100%;
+  margin-top: 24px;
+  padding: 16px;
   font-size: 21px;
+  line-height: 26px;
 }
 
-.features-items h2 
+*/
+-------------------------------------------
+
+
+
+
+------ Футер --------
+
+.main-footer .footer-items {
+  position: relative;
+}
+
+.map {  
+  height: 593px;
+  background: #e2e7d0 no-repeat 50% 100%;  
+}
+
+.map iframe {
+  height: 593px;
+  width: 100%;
+  border: none;
+}
+
+
+.main-footer .footer-items {
+  position: relative;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.main-footer .footer-items {
+  padding: 30px 0;
+  text-align: center;
+  background: rgba(254,254,254,.9);
+}
+
+
+.footer-tag {
+  padding-right: 17px 0;	
+}
+
+.footer-tag a {
+  font-size: 21px;
+  line-height: 26px;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.footer-tag a {
+  color: #000;
+}
+
+.footer-tag a:hover {
+  color: #81b3d2;
+}
+
+.footer-tag a:active {
+  color: #000;
+  opacity: .3;	
+}
+
+.footer-social li {
+  display: inline-block;
+  vertical-align: top;
+  margin: 6px 3px;
+}
+
+.social-button {
+  display:  block;
+  width: 46px;
+  height: 48px;
+  padding: 0;
+  font-size: 0;
+  line-height: 0;
+}
+
+.social-button::before {
+  font-size: 20px;
+  line-height: 48px;
+}
+
+.footer-copyright .secondary-text,
+.footer-copyright .logo-htmlacademy {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.footer-copyright .secondary-text {
+  margin-left: 10px;
+  font-size: 14px;
+}
+
+.button-htmlacademy {
+  width: 113px;
+  height: 39px;
+  margin: 4px 8px;
+  text-decoration: none;
+  background: transparent;
+  background-position: 50% -198px;
+}
+
+.button-htmlacademy:hover {
+  background-position: 50% -99px;
+}
+
+.button-htmlacademy:active {
+  background-position: 50% 0;
+}
+
+
+
+
